use nvidia gpu usages from rust service
