# Source/Services/VitalService/VitalService/swagger/v1/swagger.json
@@ -1917,6 +1917,7 @@
       },
       "GpuUsage": {
         "required": [
+          "deviceIndex",
           "temperatureReadings"
         ],
         "type": "object",
@@ -1942,6 +1943,17 @@
               "type": "number",
               "format": "float"
             }
+          },
+          "deviceIndex": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "partNumber": {
+            "required": [
+              "chars",
+              "length"
+            ],
+            "type": "string"
           },
           "totalMemoryBytes": {
             "required": [
@@ -2334,12 +2346,16 @@
       "NetworkAdapterProperties": {
         "required": [
           "iPInterfaceProperties",
+          "isUp",
           "name"
         ],
         "type": "object",
         "properties": {
           "ipInterfaceProperties": {
             "$ref": "#/components/schemas/IPInterfaceProperties"
+          },
+          "isUp": {
+            "type": "boolean"
           },
           "name": {
             "required": [
